--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "enmap": "^5.8.7",
-    "random-js": "^2.1.0"
+    "random-js": "^2.1.0",
+    "short-uuid": "^4.2.0"
   }
 }
