--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "random-js": "^2.1.0"
   },
   "devDependencies": {
-    "@types/common-tags": "^1.8.1"
+    "@types/common-tags": "^1.8.1",
+    "typescript": "^4.4.4"
   }
 }
